@@ -1,3 +1,7 @@
+2008-07-21  Lluis Sanchez Gual <lluis@novell.com> 
+
+	* Mono.Debugging.Client/ObjectValue.cs: Added some missing null checks.
+
 2008-07-16  Lluis Sanchez Gual <lluis@novell.com> 
 
 	* Mono.Debugging.Client/BreakpointStore.cs,
